# relic_density

./: CMakeLists.txt
Figures/: Figure_RK4.py  Figure_Z.py  Figure_integrand.py  Figure_interp.py  Figure_relic_density.py  Figure_sigma_v.py  Figure_thermal_av.py
Figures/Figures/: Z.eps  sigma_v.eps  sigma_v_test.eps  test.eps  thermal_av.eps
Figures/data/: Z.txt  sigma_v.txt  thermal_av.txt
documentation/: no_resonance.eps  rd_documentation.tex  relic_density.eps  resonance.eps
include/: RK4.hpp  bessel.hpp  cross_section.hpp  data.hpp  figures.hpp  figures_rd.hpp  integrate.hpp  interp.hpp  models.hpp  rd.hpp  singletdm.hpp
src/: cross_section.cpp  figures.cpp  figures_rd.cpp  integrate.cpp  interp.cpp  main.cpp  mdm.cpp  rd.cpp  relic_density.cpp  relic_density.py  singletdm.cpp  singletdmz3.cpp
